tests/samples/valid/bit_integer_without_suffix.pn
fn main() -> u8
{
	var x = 0xc8 as u8;
	return: x
}
