tests/samples/invalid/typed_naked_integer_too_big.pn
fn main()
{
	var a: u8 = 256;
}
